module-2/cl1-k8s/cl1-lb.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "myapp-cl1-lb"
  namespace: "default"
spec:
  ports:
  - name: "http"
    port: 80
    protocol: "TCP"
    targetPort: 80
  selector:
    load-balancer-myapp-cl1-lb: "true"
  sessionAffinity: "None"
  type: "NodePort"
