module-2/cl1-k8s/cl1-ingress.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  annotations:
    kubernetes.io/ingress.class: "istio"
  name: "myapp-cl1-ingress"
  namespace: "default"
spec:
  backend:
    serviceName: "myapp-cl1-lb"
    servicePort: 80
